# GTask

./: .gitignore  README.md  pyproject.toml  requirements.txt
gtask_tui/: main.py  task_service.py  ui_manager.py
tasks-tui/: main.py  task_service.py  ui_manager.py
tasks_tui/: local_storage.py  main.py  task_service.py  ui_manager.py
