[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtask"
version = "0.1.0"
description = "A command-line TUI for managing Google Tasks."
readme = "README.md"
authors = [
    {name = "Huy Pham", email = "huyquangpham2005@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console :: Curses",
]
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
]

[project.scripts]
tasks-tui = "tasks_tui.main:main_loop"
